# depthai_dual_cam_ros_detector

./: README.md  run.sh  run_without_pipelinegraph.sh  run_without_ros.sh  run_without_ros_without_pipelinegraph.sh
docker/: Dockerfile  Dockerfile.bak  entrypoint.sh
src/minimum_image_publisher/: CMakeLists.txt  README.md  package.xml
src/minimum_image_publisher/config/: yolov6n.yaml
src/minimum_image_publisher/src/: image_publisher.cpp  image_publisher_ros.cpp  image_publisher_ros_single_detection.cpp
utils/: build.sh  build_local.sh  start_bash.sh
